<resources>
    <string name="app_name">Apoti-care</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ANNLUTHFIISA</string>
    <string name="nav_header_subtitle">luthfiannisa@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="main_tab1">FAKTOR RESIKO CVD</string>
    <string name="main_tab2">BODY MASS INDEX</string>
    <string name="main_tab3">PROFIL LABORATORIUM</string>
    <string name="main_tab4">WAKTU MINUM OBAT</string>
    <string name="main_tab5">TEMUKAN KIMIA FARMA</string>
    <string name="main_tab6">INFORMASI OBAT</string>
    <string name="main_tab7">ARTIKEL KESEHATAN &amp; KECANTIKAN</string>
    <string name="main_tab8">KONSULTASI APOTEKER</string>
    <string name="main_tab9">SARAN VITAMIN</string>
    <string name="main_tab10">TRANSAKSI PRODUK</string>
    <string name="main_tab11">MEMBER ROYALTI</string>
    <string name="main_tab12">TEMUKAN DOKTER</string>
    <string name="txtProdukDescription"><![CDATA[Manfaat : \nMenurunkan hipertensi, hiperkolesterolemia, trigliserida, LDL dan meningkatkan HDL. \nMembantu menghambat penggumpalan darah abnormal. \nMenjaga kesehatan jantung & melancarkan sirkulasi darah keseluruh tubuh.]]></string>
</resources>
